# LingStation

./: .gitignore  .gitmodules  Cargo.toml  README.md  VIDEO.txt  crash.dmp  project.ling.json  settings.ling.json
.github/: copilot-instructions.md
.github/workflows/: build-and-release.yml
app/: Cargo.toml  build.rs
app/src/: clap_host.rs  main.rs  vst3.rs
engine/: Cargo.toml
engine/src/: audio.rs  lib.rs  midi.rs  timeline.rs  vst.rs
examples/Final Fantasy Themes/: project.json
examples/Final Fantasy Themes/midi/: 01_Flute - SannySynth_Track 2.mid  02_Strings 1  - MiceSynth_Track 3.mid  03_Strings 2 - FishSynth_Track 4.mid  04_Cello -  DogSynth_Track 5.mid  05_Piano - LingSynth_Track 6.mid
examples/KooKooKlock/: project.json
examples/KooKooKlock/midi/: 01_Violin_Track 3.mid  02_Electric Piano 1_Track 4.mid  03_Electronic Kit_Track 5.mid  04_Synth Bass 1_Track 6.mid  05_Pan Flute_Track 7.mid
examples/SeekTheLight/: project.json
examples/SeekTheLight/midi/: 01_Synth Strings 1_Track 3.mid  02_Lead 2 (sawtooth)_Track 4.mid  03_Lead 8 (bass + lead)_Track 5.mid  04_Synth Bass 1_Track 6.mid  05_Electronic Kit_Track 7.mid  06_Synth Voice_Track 8.mid  07_Lead 1 (square)_Track 9.mid  08_Recorder_Track 10.mid  09_Shakuhachi_Track 11.mid
sample_kits/: ambient_kit.json  dnb_kit.json  edm_kit.json  example_kit.json  house_kit.json
samples/: README.md
templates/Ambient Pads/: project.json
templates/EDM Starter/: project.json
templates/Hip Hop/: project.json
templates/LoFi Chill/: project.json
templates/Rock Sketch/: project.json
