[package]
name = "lingstation-app"
version.workspace = true
edition.workspace = true

[dependencies]
engine = { path = "../engine" }
eframe = "0.27"
egui = "0.27"
egui_extras = { version = "0.27", features = ["svg"] }
image = { version = "0.24", default-features = false, features = ["png"] }
rfd = "0.14"
cpal = "0.15"
midir = "0.8"
rodio = "0.17"
vst3-sys = { git = "https://github.com/RustAudio/vst3-sys" }
vst3 = "0.3"
libloading = "0.8"
com-scrape-types = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
raw-window-handle = "0.6"
hound = "3.5"
ogg = "0.8"
vorbis-encoder = "0.1"
flacenc = "0.5.1"
windows-sys = { version = "0.52", features = [
	"Win32_Foundation",
	"Win32_Graphics_Gdi",
	"Win32_System_Diagnostics_Debug",
	"Win32_System_Com",
	"Win32_System_Kernel",
	"Win32_System_Memory",
	"Win32_System_LibraryLoader",
	"Win32_System_Ole",
	"Win32_Storage_FileSystem",
	"Win32_System_Threading",
	"Win32_UI_Input_KeyboardAndMouse",
	"Win32_UI_WindowsAndMessaging",
] }

[build-dependencies]
winres = "0.1"
image = { version = "0.24", default-features = false, features = ["png"] }
ico = "0.3"
